--- a/test-data-dev.yml
+++ b/test-data-dev.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:1111/eureka/  #×¢²áÖÐÐÄµØÖ·
+      defaultZone: http://localhost:1111/eureka/
